--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
 body {
-	margin: 8px;
+	margin: 0;
 	background-color: black;
-	display: flex;
-	width: 100%;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
 }
 #canvas {
 	width: 640px;
